Fix Maven 3.8 compatibility